# starting-ragchatbot-codebase

./: .pre-commit-config.yaml  CLAUDE.md  README.md  format.sh  frontend-changes.md  pyproject.toml  quality-check.sh
backend/: ai_generator.py  app.py  models.py  rag_system.py  search_tools.py
backend/tests/: README.md  __init__.py  conftest.py  test_ai_generator.py  test_api.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
